Fix selenium Grid Host